--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,6 +11,7 @@
 		<title>Astro</title>
 	</head>
 	<body>
-		<h1>Astro</h1>
+		<h1>My first Astro blog page</h1>
+		<p>This page will be about medieval music, maybe. Or something else, who knows?</p>
 	</body>
 </html>
