Added 2 new pages - 'about' & 'blog'

--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -13,8 +13,9 @@
 	<body>
 		<a href="/">Home</a>
         <a href="/about/">About</a>
-		<a href="/blog/">Blog</a>
+        <a href="/blog/">Blog</a>
         
-		<h1>My first Astro blog</h1>
+		<h1>My first Astro blog page</h1>
+		<p>This page will be about medieval music, maybe. Or something else, who knows?</p>
 	</body>
 </html>
